update project ensuring all everonmnent is set up properly

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-restful = "*"
 flask-cors = "*"
+flask-marshmallow = "*"
+flask-bcrypt = "*"
+sqlalchemy = "*"
+marshmallow-sqlalchemy = "*"
 faker = "*"
 
 [dev-packages]
