--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@eslint/js": "^9.13.0",
     "@mui/icons-material": "^6.1.4",
-    "@mui/material": "^6.1.4",
+    "@mui/material": "^6.1.8",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +15,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "formik": "^2.4.6",
+    "formik-mui": "^5.0.0-alpha.1",
     "globals": "^15.11.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
