--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.6",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "formik": "^2.4.6",
@@ -19,11 +20,12 @@
     "globals": "^15.11.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.6",
-    "recharts": "^2.13.0",
+    "recharts": "^2.13.3",
     "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
